fixed search button placement

--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
                                     <option>gluten-free brownies</option>
                                 </select>
                             </div>
-                            <button class="btn" type="submit">Search</button>
+                            <div>
+                                <button class="btn btn-search" type="submit">Search</button>
+                            </div>
                         </div>
-                        <p class="hint subtle">Tip: Combine a keyword and an ingredient for tighter results.</p>
+                        <p class="hint subtle">Tip: Combine a keyword and an ingredient for better results</p>
                     </form>
                 </div>
             </section>
@@ -65,7 +67,7 @@
             <section id="results">
                 <div class="section-header">
                     <h2 class="section-title">Search results</h2>
-                    <span class="subtle">Showing 5 placeholder recipes</span>
+                    <span class="subtle">Top 5 results</span>
                 </div>
 
                 <div class="card-grid card-grid--five-wide">
@@ -107,7 +109,7 @@
             <section id="suggestions">
                 <div class="section-header">
                     <h2 class="section-title">Suggested for you</h2>
-                    <span class="subtle">Three ideas to try</span>
+                    <span class="subtle">A few ideas to try</span>
                 </div>
 
                 <div class="card-grid">
