made a bunch of progress

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Recipe Book</title>
     <link rel="icon" href="./assets/images/recipe-book.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./styles/styles.css" />
+    <script type="module" src="./scripts/app.js"></script>
 </head>
 
 <body>
 
-    <!-- Header -->
     <header class="band">
         <div class="container brand">
             <a class="site-logo" href="/">
@@ -22,15 +22,13 @@
         </div>
     </header>
 
-    <!-- Hero Image -->
     <section class="hero">
-        <img src="https://picsum.photos/1200/400?food" alt="Delicious food assortment" />
+        <!-- <img src="https://picsum.photos/1200/400?food" alt="Delicious food assortment" /> -->
+        <img src="./assets/images/hero-final.webp" alt="Ingredients on various, fancy spoons" />
     </section>
 
-    <!-- Main Content -->
     <main id="main" class="band">
         <div class="container">
-            <!-- Search Panel -->
             <section class="search-panel" id="search">
                 <div class="container">
                     <h2 class="search-title">Find your next recipe</h2>
