--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
                 <div class="card-grid card-grid--five-wide">
                     <!-- Five placeholder cards -->
+                    <!--
                     <article class="card" tabindex="0">
                         <img class="card-media" src="https://picsum.photos/640/400?random=1" alt="Placeholder dish 1" />
                         <div class="card-body">
@@ -100,6 +101,7 @@
                             <h3 class="card-title">Classic Beef Stew</h3>
                         </div>
                     </article>
+                    -->
                 </div>
             </section>
 
@@ -136,12 +138,21 @@
 
     <!-- Footer -->
     <footer class="band">
-        <div class="container">
-            <p style="margin:.25rem 0 0">Jay Jorgensen • WDD 330 • 10/1/2025</p>
-            <p style="margin:.25rem 0 0">
-                <a href="https://www.flaticon.com/free-icons/recipe-book" title="recipe book icons">Recipe book icons
-                    created by nawicon - Flaticon</a>
-            </p>
+        <div class="container spread-elements">
+            <div class="left-footer">
+                <p style="margin:.25rem 0 0">Jay Jorgensen • WDD 330 • 10/10/2025</p>
+            </div>
+            <div class="right-footer">
+                <p style="margin:.25rem 0 0">
+                    <a href="https://www.flaticon.com/free-icons/recipe-book" title="recipe book icons">Recipe book
+                        icons
+                        created by nawicon - Flaticon</a>
+                </p>
+                <p><a href="https://www.pexels.com/photo/composition-of-spoonfuls-with-various-spices-4199098/"
+                        title="hero image">Hero image by Kaboompics.com</p>
+                <p><a href="https://www.pexels.com/photo/flatlay-photography-of-white-ceramic-bowl-2611817/"
+                        title="placeholder plate image">Empty plate imge by Anna Tukhfatullina</a></p>
+            </div>
         </div>
     </footer>
 </body>
